# VocalBuddies

./: README.md  Rapport_PI4_-_SB1c.docx  instal.sh  program.sh
ALIZE/: Makefile  Makefile.in  config.status  configure.in  configure~  libtool
ALIZE/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.2  traces.3
ALIZE/src/: Makefile  Makefile.in
ALIZE/src/.deps/: AudioFileReader.Po  AudioFrame.Po  AudioInputStream.Po  AutoDestructor.Po  CmdLine.Po  Config.Po  ConfigChecker.Po  ConfigFileReaderAbstract.Po  ConfigFileReaderRaw.Po  ConfigFileReaderXml.Po  ConfigFileWriter.Po  Distrib.Po  DistribGD.Po  DistribGF.Po  DistribRefVector.Po  DoubleSquareMatrix.Po  Exception.Po  Feature.Po  FeatureFileList.Po  FeatureFileReader.Po  FeatureFileReaderAbstract.Po  FeatureFileReaderHTK.Po  FeatureFileReaderRaw.Po  FeatureFileReaderSPro3.Po  FeatureFileReaderSPro4.Po  FeatureFileReaderSingle.Po  FeatureFileWriter.Po  FeatureFlags.Po  FeatureInputStream.Po  FeatureInputStreamModifier.Po  FeatureMultipleFileReader.Po  FeatureServer.Po  FileReader.Po  FileWriter.Po  FrameAcc.Po  FrameAccGD.Po  FrameAccGF.Po  Histo.Po  LKVector.Po  Label.Po  (+38 more)
Model/: Chrono.java  Enregistrement.java  Joueurs.java  Labyrinthe.java  ListePlayer.txt  Model.java  Piece.java  Recorder.java  TestVocal.java  VocalMovement.java  script_addPlayer.sh  script_getAudioToText.sh  testAudio.py
ModelCreation/: .gitignore  TestClients.res  TestList.ndx  script_Model.sh  script_Model2.sh  script_norm.sh  script_testVoc.sh  sfbcep  test.ndx
View/: CasePanel.java  DifficultySelect.java  (+5 more)
(+14 files in other folders)
